fix: removed parentheses on function which was causing width on mobile to be incorrect

--- a/src/example.css
+++ b/src/example.css
@@ -1,5 +1,9 @@
 @import './';
 
+.component-panel {
+  overflow: hidden;
+}
+
 .carousel__list {
   font-size: 16px;
 }
